# better-zybooks

./: Dockerfile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
auth/: auth.py
docker/: app.dockerfile  nginx.dockerfile
plugins/: database.py
routes/: class_route.py
static/lib/: dashboard.js  editor.js
static/lib/bootstrap/css/: footer.css
static/lib/prism/css/: prism-live.css  prism.css
static/lib/prism/js/: prism-live.js  prism.js
templates/: 404.html  base.html  dashboard.html  editor.html  index.html  register.html  signin.html  test_index.html
test/data_structures/linked_list/: config  linkedlist.py  ll.py  prompt.md  run.sh  template.py  test.py  testcases.json
test/data_structures/stack_impl/: config  prompt.md  stack.py  template.py  test.py  testcases.json
